--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,17 @@ body {
 		color: #5C593D;
 		float:left;
 	}
+		h1 a {
+			text-shadow:0 1px 0 #F5F5F5;
+			color: #5C593D;
+			text-decoration: none;
+		}
+		h1 span.small {
+			font-size: 10px;	
+		}
+	h2 {
+		margin: 0 0 25px;
+	}
 	p {
 		font-size: 12px;
 		line-height: 12px;
