--- a/css/global.css
+++ b/css/global.css
@@ -18,6 +18,7 @@ body {
 		}
 	h2 {
 		margin: 0 0 25px;
+		line-height: 15px;
 	}
 	p {
 		font-size: 12px;
@@ -51,15 +52,9 @@ body {
 		-webkit-border-radius: 5px;
 		border-radius: 5px;
 	}
-		ul.imagescrubber {
-			line-height: 0;
-			margin-bottom: 10px;
-		}	
-			ul.imagescrubber li {
-				display: inline;
-				float: left;	
-			}
-			
+	div.download {
+		text-align: center;
+	}
 /* CODE STYLING */
 pre {
     padding: 10px;
