--- a/css/global.css
+++ b/css/global.css
@@ -17,7 +17,7 @@ body {
 			font-size: 10px;	
 		}
 	h2 {
-		margin: 0 0 25px;
+		margin: 5px 0 10px;
 		line-height: 15px;
 	}
 	p {
@@ -38,7 +38,7 @@ body {
 		text-decoration:none;	
 	}
 #wrapper {
-	width: 540px;
+	width: 580px;
 	margin: 0 auto;
 	padding: 25px 0;
 }
@@ -62,6 +62,7 @@ pre {
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	line-height: 0;
+	margin-bottom:10px;
 }
 	pre code {
 		display: block;
