--- a/css/global.css
+++ b/css/global.css
@@ -1,36 +1,47 @@
+
+@font-face {
+	font-family: 'BPreplayRegular';
+	src: url('BPreplay-webfont.eot');
+	src: local('☺'), url('../fonts/BPreplay-webfont.woff') format('woff'), url('../fonts/BPreplay-webfont.ttf') format('truetype'), url('../fonts/BPreplay-webfont.svg#webfontIhiDai48') format('svg');
+	font-weight: normal;
+	font-style: normal; }
+
 body {
-   	background:#dcdbd3;
-   	font-family: Helvetica, Arial, sans-serif;
-}
+   	background:#FFF;
+   	font-family: 'BPreplayRegular', Helvetica, Arial, sans-serif; }
 	h1 {
+		font-size: 50px;
 		margin: 0 0 25px;
 		text-shadow:0 1px 0 #F5F5F5;
-		color: #5C593D;
-		float:left;
-	}
+		color: #000;
+		float:left; }
 		h1 a {
 			text-shadow:0 1px 0 #F5F5F5;
-			color: #5C593D;
-			text-decoration: none;
-		}
+			color: #000;
+			text-decoration: none; }
 		h1 span.small {
-			font-size: 10px;	
-		}
+			font-size: 10px; }
 	h2 {
+		font-size: 20px;
 		margin: 5px 0 10px;
-	}
+		text-transform: uppercase; }
 	ul,
 	p {
-		font-size: 12px;
+		font-size: 14px;
 		margin-bottom: 10px;
-	}
+		color: rgb(187,187,187);
+		color: rgba(0,0,0,0.4);
+		line-height: 18px; }
+		ul a,
+		p a {
+			color: #555;
+			color: rgba(0,0,0,0.6);
+			text-decoration: none; }
 	ul {
-		margin-left: 20px;
-		list-style-type: circle;
-	}
+		margin-left: 40px;
+		list-style-type: circle; }
 		ul li {
-			margin-bottom: 8px;	
-		}
+			margin-bottom: 8px;	 }
 	a.button {
 		float:right;
 		display:block;
@@ -41,38 +52,70 @@ body {
 		-webkit-border-radius: 3px;
 		border-radius: 3px;
 		color:#000;	
-		text-decoration:none;	
-	}
+		text-decoration:none;	 }
 #wrapper {
 	width: 580px;
 	margin: 0 auto;
-	padding: 25px 0;
-}
+	padding: 25px 0; }
+	.description {	
+		margin: 0 0 25px;
+		clear:both; }
 	.polaroid {	
 		margin: 0 0 25px;
 		clear:both;
-		background: #fff;
+		background: #EEE;
 		padding: 20px;
 		overflow: auto;
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
-		border-radius: 5px;
-	}
+		border-radius: 5px; }
 	div.download {
-		text-align: center;
-	}
-	div.spinner-demo {
-		float:left;
-		margin: 5px;
-		width: 50px;
-		height: 50px;
-		background: #000;		
-	}
-	div.spinner-demo.large {
-		width: 300px;
-		height: 300px;	
-		background: transparent;	
-	}
+		text-align: center; }
+	ul#demos {
+		list-style-type: none;
+		margin: 0; }
+		ul#demos li {
+			display: block; 
+			overflow: hidden;
+			width: 100%;
+			position: relative;
+			padding: 50px 0; }
+			ul#demos li a.credit {
+				font-family: monaco, monospace;
+				color: #fff;
+				text-decoration: none;
+				position: absolute;
+				bottom: 5px;
+				right: 5px;
+				opacity: 0.4; }
+			ul#demos li a.credit:hover {
+				opacity: 1; }
+			ul#demos li div {
+			position: relative;
+				margin: 5px;
+				width: 50px;
+				height: 50px;
+				background: #000;	
+				margin: auto;	 }
+		ul#demos li#spinner-moving {
+			background: transparent url(http://farm1.static.flickr.com/101/257641202_77eafe6691_z.jpg) center center repeat fixed;	 }
+			ul#demos li#spinner-moving div {
+				background-color: rgb(255,255,255);
+				background-color: rgba(255,255,255,0.3); }
+		ul#demos li#spinner-large {
+			background: transparent url(http://farm3.static.flickr.com/2260/2068370625_49772cc94b_z.jpg) center center repeat fixed;	 }
+			ul#demos li#spinner-large div {
+				background: transparent;
+				width: 100px;
+				height: 100px;	 }
+		ul#demos li#spinner-round {
+			background: transparent url(http://farm1.static.flickr.com/8/6802513_2743d05044_z.jpg) center center repeat fixed;	 }
+			ul#demos li#spinner-round div {
+				-moz-border-radius: 25px;
+				-webkit-border-radius: 25px;
+				border-radius: 25px;
+				background-color: rgb(0,0,0);
+				background-color: rgba(0,0,0,0.3); }
 /* CODE STYLING */
 pre {
     padding: 10px;
@@ -80,21 +123,18 @@ pre {
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	line-height: 0;
-	margin-bottom:10px;
-}
+	margin-bottom:10px; }
 	pre code {
 		display: block;
-		line-height: 15px;
-	}	
-		pre code .string { color: #3C3;}
-		pre code .constant { color: #66F;}
-		pre code .property { color: #A00;}
-		pre code .keyword { color: #E66;}
-		pre code .storage { color: #FC8;}
-		pre code .comment { color: #888;}
+		line-height: 15px; }	
+		pre code .string { color: #3C3; }
+		pre code .constant { color: #66F; }
+		pre code .property { color: #A00; }
+		pre code .keyword { color: #E66; }
+		pre code .storage { color: #FC8; }
+		pre code .comment { color: #888; }
 pre, code {
     font-family: Monaco, monospace;
     font-size: 12px;
     background: #111;
-    color: #F5F5F5;
-}
+    color: #F5F5F5; }
