--- a/css/global.css
+++ b/css/global.css
@@ -2,25 +2,35 @@
 @font-face {
 	font-family: 'BPreplayRegular';
 	src: url('BPreplay-webfont.eot');
-	src: local('☺'), url('../fonts/BPreplay-webfont.woff') format('woff'), url('../fonts/BPreplay-webfont.ttf') format('truetype'), url('../fonts/BPreplay-webfont.svg#webfontIhiDai48') format('svg');
+	src: local('☺'), url('../fonts/bpreplay/BPreplay-webfont.woff') format('woff'), url('../fonts/bpreplay/BPreplay-webfont.ttf') format('truetype'), url('../fonts/bpreplay/BPreplay-webfont.svg#webfontIhiDai48') format('svg');
 	font-weight: normal;
 	font-style: normal; }
 
+@font-face {
+    font-family: 'GravurCondensed-Bold';
+    src: url('../fonts/gravur-condensed/gravurcondensed-bold-webfont.eot');
+    src: local('☺'), url('../fonts/gravur-condensed/gravurcondensed-bold-webfont.woff') format('woff'), url('../fonts/gravur-condensed/gravurcondensed-bold-webfont.ttf') format('truetype'), url('../fonts/gravur-condensed/gravurcondensed-bold-webfont.svg#webfontnIJE7XJ2') format('svg');
+    font-weight: normal;
+    font-style: normal; }
+
 body {
    	background:#FFF;
-   	font-family: 'BPreplayRegular', Helvetica, Arial, sans-serif; }
+   	font-family: 'GravurCondensed-Bold', Helvetica, Arial, sans-serif; }
 	h1 {
 		font-size: 50px;
 		margin: 0 0 25px;
 		text-shadow:0 1px 0 #F5F5F5;
 		color: #000;
-		float:left; }
+		float:left;
+		text-transform: uppercase;  }
 		h1 a {
 			text-shadow:0 1px 0 #F5F5F5;
 			color: #000;
 			text-decoration: none; }
-		h1 span.small {
-			font-size: 10px; }
+		h1 div {
+			float: left;
+			
+		}
 	h2 {
 		font-size: 20px;
 		margin: 5px 0 10px;
